--- a/build.xml
+++ b/build.xml
@@ -116,7 +116,7 @@
 	<condition property="agent.generate.headers.javac">
 		<and>
 			<antversion atleast="1.10.2" />
-			<matches pattern="^(1[.]9)|9|(1[0-9])" string="${java.version}" />
+			<matches pattern="^(1[.]9)|9|([1-9][0-9])" string="${java.version}" />
 		</and>
 	</condition>
 
